--- a/delivery-spring-mvc/src/main/webapp/resources/style.css
+++ b/delivery-spring-mvc/src/main/webapp/resources/style.css
@@ -12,14 +12,13 @@
     color : mintcream;
     padding-left : 1em;
     padding-bottom : 1em;
-
     margin-top : 1em;
     margin-bottom : 1em;
     padding-right : 1em;
 }
 
 .shipment_tracking_id{
-
+    padding-top : 0.3em;
 }
 
 .shipment_base_info {
@@ -48,4 +47,5 @@
     padding-bottom : 1em;
     float : right;
 }
+
 
